// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-breadcrumb all buttons 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="ebay-breadcrumb-breadcrumbs-heading"
    class="breadcrumbs"
    role="navigation"
  >
    <h3
      class="clipped"
      id="ebay-breadcrumb-breadcrumbs-heading"
    >
      Custom page navigation
    </h3>
    <ul>
      <li>
        <button>
          eBay
        </button>
        <svg
          aria-hidden="true"
          class="icon icon--breadcrumb"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-breadcrumb"
          />
        </svg>
      </li>
      <li>
        <button>
          Cell Phones, Smart Watches & Accessories
        </button>
        <svg
          aria-hidden="true"
          class="icon icon--breadcrumb"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-breadcrumb"
          />
        </svg>
      </li>
      <li>
        <button>
          Smart Watch Accessories
        </button>
        <svg
          aria-hidden="true"
          class="icon icon--breadcrumb"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-breadcrumb"
          />
        </svg>
      </li>
      <li>
        <button
          aria-current="location"
        >
          Smart Watch Bands
        </button>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Storyshots ebay-breadcrumb all links 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="ebay-breadcrumb-breadcrumbs-heading"
    class="breadcrumbs"
    role="navigation"
  >
    <h3
      class="clipped"
      id="ebay-breadcrumb-breadcrumbs-heading"
    >
      Custom page navigation
    </h3>
    <ul>
      <li>
        <a
          href="https://www.ebay.com/"
        >
          eBay
        </a>
        <svg
          aria-hidden="true"
          class="icon icon--breadcrumb"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-breadcrumb"
          />
        </svg>
      </li>
      <li>
        <a
          href="https://www.ebay.com/rpp/cell-phone-pda"
        >
          Cell Phones, Smart Watches & Accessories
        </a>
        <svg
          aria-hidden="true"
          class="icon icon--breadcrumb"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-breadcrumb"
          />
        </svg>
      </li>
      <li>
        <a
          href="https://www.ebay.com/b/Smart-Watch-Accessories/182064/bn_16565905"
        >
          Smart Watch Accessories
        </a>
        <svg
          aria-hidden="true"
          class="icon icon--breadcrumb"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-breadcrumb"
          />
        </svg>
      </li>
      <li>
        <a
          aria-current="location"
          href="https://www.ebay.com/b/Smart-Watch-Bands/182068/bn_16565906"
        >
          Smart Watch Bands
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Storyshots ebay-breadcrumb custom props 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="ebay-breadcrumb-breadcrumbs-heading"
    class="breadcrumbs custom-breadcrumbs"
    custom-attr="value"
    role="navigation"
  >
    <h2
      class="clipped"
      id="ebay-breadcrumb-breadcrumbs-heading"
    >
      Page navigation
    </h2>
    <ul>
      <li>
        <a
          _sp="p2345.m909.l34"
          data-track="123"
          href="http://www.ebay.com/"
          navsrc="{}"
        >
          eBay
        </a>
        <svg
          aria-hidden="true"
          class="icon icon--breadcrumb"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-breadcrumb"
          />
        </svg>
      </li>
      <li>
        <a
          _sp="p2345.m909.l34"
          data-track="456"
          href="https://www.ebay.com/rpp/cell-phone-pda"
          navsrc="{}"
        >
          Cell Phones, Smart Watches & Accessories
        </a>
        <svg
          aria-hidden="true"
          class="icon icon--breadcrumb"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-breadcrumb"
          />
        </svg>
      </li>
      <li>
        <a
          _sp="p2345.m909.l34"
          data-track="789"
          href="https://www.ebay.com/b/Smart-Watch-Accessories/182064/bn_16565905"
          navsrc="{}"
        >
          Smart Watch Accessories
        </a>
        <svg
          aria-hidden="true"
          class="icon icon--breadcrumb"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-breadcrumb"
          />
        </svg>
      </li>
      <li>
        <a
          aria-current="location"
        >
          Smart Watch Bands
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Storyshots ebay-breadcrumb default 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="ebay-breadcrumb-breadcrumbs-heading"
    class="breadcrumbs"
    role="navigation"
  >
    <h2
      class="clipped"
      id="ebay-breadcrumb-breadcrumbs-heading"
    >
      Page navigation
    </h2>
    <ul>
      <li>
        <a
          href="https://www.ebay.com/"
        >
          eBay
        </a>
        <svg
          aria-hidden="true"
          class="icon icon--breadcrumb"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-breadcrumb"
          />
        </svg>
      </li>
      <li>
        <a
          href="https://www.ebay.com/rpp/cell-phone-pda"
        >
          Cell Phones, Smart Watches & Accessories
        </a>
        <svg
          aria-hidden="true"
          class="icon icon--breadcrumb"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-breadcrumb"
          />
        </svg>
      </li>
      <li>
        <a
          href="https://www.ebay.com/b/Smart-Watch-Accessories/182064/bn_16565905"
        >
          Smart Watch Accessories
        </a>
        <svg
          aria-hidden="true"
          class="icon icon--breadcrumb"
          focusable="false"
          height="8"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-breadcrumb"
          />
        </svg>
      </li>
      <li>
        <a
          aria-current="location"
        >
          Smart Watch Bands
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
